# Jarivs-AI-Assistant

./: .gitignore  Cargo.toml  README.md
crates/agents/: Cargo.toml
crates/agents/src/: lib.rs
crates/agents/tests/: integration_test.rs
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/browser/: Cargo.toml
crates/browser/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  hardware.rs  lib.rs  metrics.rs
crates/desktop/: Cargo.toml
crates/desktop/src/: lib.rs
crates/diagnostics/: Cargo.toml
crates/diagnostics/src/: lib.rs
crates/files/: Cargo.toml
crates/files/src/: lib.rs
crates/generator/: Cargo.toml
crates/generator/src/: lib.rs
crates/git/: Cargo.toml
crates/git/src/: lib.rs
crates/llm/: Cargo.toml
crates/llm/src/: anthropic.rs  crawler.rs  gemini.rs  lib.rs  ollama.rs  openai.rs
crates/memory/: Cargo.toml
crates/memory/src/: lib.rs
crates/plugins/: Cargo.toml
crates/plugins/src/: lib.rs
crates/refiner/: Cargo.toml
crates/refiner/src/: lib.rs
crates/terminal/: Cargo.toml
crates/terminal/src/: lib.rs
crates/voice/: Cargo.toml
crates/voice/src/: lib.rs
