[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/llm",
    "crates/memory",
    "crates/plugins",
    "crates/agents",
    "crates/desktop",
    "crates/browser",
    "crates/voice",
    "crates/files",
    "crates/refiner",
    "crates/generator",
    "crates/cli",
    "crates/terminal",
    "crates/git",
    "crates/diagnostics",
    "crates/api",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
regex = "1"
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
tokio-stream = "0.1"
sysinfo = "0.33"
enigo = "0.2"
headless_chrome = "1.0"
image = "0.25"
zip = "2.1"
html2md = "0.2"
axum = "0.7"

