[package]
name = "friday-agents"
version = "0.1.0"
edition = "2021"

[dependencies]
friday-core = { path = "../core" }
friday-llm = { path = "../llm" }
friday-memory = { path = "../memory" }
friday-plugins = { path = "../plugins" }
friday-desktop = { path = "../desktop" }
friday-browser = { path = "../browser" }
friday-files = { path = "../files" }
friday-refiner = { path = "../refiner" }
friday-generator = { path = "../generator" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
zip = { workspace = true }
html2md = { workspace = true }
