[package]
name = "friday-api"
version = "0.1.0"
edition = "2021"

[dependencies]
friday-core = { path = "../core" }
friday-memory = { path = "../memory" }
friday-agents = { path = "../agents" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
