[package]
name = "friday-files"
version = "0.1.0"
edition = "2021"

[dependencies]
friday-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
zip = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
