[package]
name = "friday-git"
version = "0.1.0"
edition = "2021"

[dependencies]
friday-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
friday-terminal = { path = "../terminal" }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
