[package]
name = "friday-llm"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
friday-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
html2md = { workspace = true }
