[package]
name = "friday-refiner"
version = "0.1.0"
edition = "2021"

[dependencies]
friday-core = { path = "../core" }
friday-llm = { path = "../llm" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"
tokio = { workspace = true }
